[package]
authors = ["Félix Saparelli <felix@passcod.name>"]
name = "blograph"
version = "0.1.0"

[workspaces]

[dependencies]
post = { path = "post" }
list = { path = "list" }

clap = "2.20.5"
colored = "1.4.0"
env_logger = "0.4.0"
hyper = "0.10.4"
lazy_static = "0.2.2"
log = "0.3.6"
regex = "0.2.1"
time = "0.1.36"
url = "1.4.0"
walkdir = "1.0.7"
yaml-rust = "0.3.5"
