[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
build = "build.rs"
license = "Artistic-2.0"
name = "blograph"
version = "0.2.0"

[build-dependencies]
neon-build = "0.1.13"

[dependencies]
colored = "1.5.1"
env_logger = "0.4.3"
lazy_static = "0.2.8"
log = "0.3.8"
neon = "0.1.17"
neon-runtime = "0.1.17"
regex = "0.2.2"
time = "0.1.37"
walkdir = "1.0.7"
yaml-rust = "0.3.5"

[dependencies.list]
path = "list"

[dependencies.post]
path = "post"

[lib]
crate-type = ["dylib"]
name = "blograph"
