[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
build = "build.rs"
license = "Artistic-2.0"
name = "blograph"
version = "0.2.0"

[workspace]
members = ["post", "list"]

[build-dependencies]
neon-build = "0.1.13"

[dependencies]
colored = "1.5.1"
env_logger = "0.6.1"
lazy_static = "1.3.0"
log = "0.4.6"
neon = "0.1.17"
neon-runtime = "0.1.17"
regex = "1.1.5"
time = "0.1.37"
walkdir = "2.2.7"
yaml-rust = "0.4.3"

[dependencies.list]
path = "list"

[dependencies.post]
path = "post"

[lib]
crate-type = ["dylib"]
name = "blograph"
